--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   gpi:
-    image: docker-int.symphonyretailai.com/tools/gpi:31816
+    image: docker-int.symphonyretailai.com/tools/gpi:latest
     ports:
       - 8081:8080
     volumes:
